Bug 213492 - fails to build - Overloading ambiguity
Summary: fails to build - Overloading ambiguity
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Solaris
: NOR normal
Target Milestone: ---
Assignee: Akarsh Simha
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-07 00:11 UTC by tropikhajma
Modified: 2010-04-24 17:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (428 bytes, patch)
2009-11-07 00:12 UTC, tropikhajma
Details
patch for the second issue (873 bytes, patch)
2010-04-18 01:14 UTC, tropikhajma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tropikhajma 2009-11-07 00:11:24 UTC
Version:           4.3.73 (using Devel)
Compiler:          Sun Studio 12 U1 
OS:                Solaris
Installed from:    Compiled sources

building kdeedu 4.3.73 fails with

"/export/home/hajma/packages/BUILD/kdeedu-4.3.73svn1040395/kstars/kstars/skymap.cpp", line 1493: Error: Overloading ambiguity between "std::sqrt(double)" and "std::sqrt(float)".
Comment 1 tropikhajma 2009-11-07 00:12:34 UTC
Created attachment 38148 [details]
patch
Comment 2 tropikhajma 2009-11-07 09:36:58 UTC
also a bit further down the road:
...
"/export/home/hajma/packages/BUILD/kdeedu-4.3.73svn1040395/kstars/kstars/skymapevents.cpp", line 857: Error: Overloading ambiguity between "std::log10(double)" and "std::log10(float)".
"/export/home/hajma/packages/BUILD/kdeedu-4.3.73svn1040395/kstars/kstars/skymapevents.cpp", line 866: Error: Overloading ambiguity between "std::log10(double)" and "std::log10(float)".
Comment 3 tropikhajma 2010-04-18 01:14:24 UTC
Created attachment 42863 [details]
patch for the second issue
Comment 4 Alexey Khudiakov 2010-04-24 17:12:39 UTC
SVN commit 1118376 by khudyakov:

Fix compilation under Sun Studio 12 U1 on OpenSolaris

Thanks to tropikhajma for testing and patch

BUG: 213492

 M  +1 -1      skymap.cpp  
 M  +2 -2      skymapevents.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1118376